=== 0.0.1.beta4 / 2010-07-?

== New Features
* Added Generic Repository.
* Scaffold Repository to each Model.

=== 0.0.1.beta4 / 2010-07-16

== New Features
* Added validator support with hibernate-validator.
* Error Messages.
* Redirect to form when occur validation erros.
* Added joda time dependency.
* Create messages.properties(i18n).
  
== Bugfixes
* Fixed i.e problems.

=== 0.0.1.beta3 / 2010-07-11

== New Features
* Added command to start web server(jetty).
* Added boolean support.

== Improvements
* Bumped vraptor version to 3.1.3.
* Change log4j.xml to log4j.properties.
* Change views directory from WEB-INF/freemarker to WEB-INF/views.
* Change hsqldb to use file instead of memory.
  
== Bugfixes
* Fixed pom when creating project with path like /home/rodolfo/project.
* Fixed runtime dependencies.

=== 0.0.1.beta2 / 2010-07-07
  * Crud with vraptor, maven 2, jpa, freemarker e jquery.   