@@ -2,9 +2,8 @@ package app.controllers;
 
 import java.util.List;
 
-import javax.persistence.EntityManager;
-
 import app.models.Product;
+import app.repositories.ProductRepository;
 import br.com.caelum.vraptor.Delete;
 import br.com.caelum.vraptor.Get;
 import br.com.caelum.vraptor.Path;
@@ -18,19 +17,19 @@ import br.com.caelum.vraptor.Validator;
 public class ProductController {
 
 	private final Result result;
-	private final EntityManager entityManager;
+	private final ProductRepository repository;
 	private final Validator validator;
 	
-	public ProductController(Result result, EntityManager entityManager, Validator validator) {
-		this.entityManager = entityManager;
+	public ProductController(Result result, ProductRepository repository, Validator validator) {
 		this.result = result;
+		this.repository = repository;
 		this.validator = validator;
 	}
 	
 	@Get
 	@Path("/products")
 	public List<Product> index() {
-		return entityManager.createQuery("from Product").getResultList();
+		return repository.findAll();
 	}
 	
 	@Post
@@ -38,7 +37,7 @@ public class ProductController {
 	public void create(Product product) {
 		validator.validate(product);
 		validator.onErrorForwardTo(this).form(product);
-		entityManager.persist(product);
+		repository.create(product);
 		result.redirectTo(this).index();
 	}
 	
@@ -53,26 +52,26 @@ public class ProductController {
 	public void update(Product product) {
 		validator.validate(product);
 		validator.onErrorForwardTo(this).form(product);
-		entityManager.merge(product);
+		repository.update(product);
 		result.redirectTo(this).index();
 	}
 	
 	@Get
 	@Path("/products/{product.id}/edit")
 	public void edit(Product product) {
-		result.forwardTo(this).form(entityManager.find(Product.class, product.getId()));
+		result.forwardTo(this).form(repository.find(product.getId()));
 	}
 
 	@Get
 	@Path("/products/{product.id}/show")
 	public Product show(Product product) {
-		return entityManager.find(Product.class, product.getId());
+		return repository.find(product.getId());
 	}
 
 	@Delete
 	@Path("/products")
 	public void destroy(Product product) {
-		entityManager.remove(entityManager.find(Product.class, product.getId()));
+		repository.destroy(repository.find(product.getId()));
 		result.redirectTo(this).index();  
 	}
 	
