@@ -3,6 +3,7 @@
 == New Features
 * Added Generic Repository.
 * Scaffold Repository to each Model.
+* Now controllers use repository instead entity manager.
 
 === 0.0.1.beta4 / 2010-07-16
 
